fixed some more gap errors & minor changes

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -113,7 +113,7 @@
 .divWithContacts {
   display: flex;
   flex-direction: column;
-  gap: 8;
+  gap: 8px;
 }
 .contact {
   color: white;
@@ -129,7 +129,7 @@
   line-height: 160%;
   display: flex;
   flex-direction: column;
-  gap: 8;
+  gap: 8px;
 }
 
 
@@ -145,5 +145,5 @@
 }
 .divWithSocials {
   display: flex;
-  gap: 24;
+  gap: 24px;
 }
