--- a/src/components/workSection/workSection.module.css
+++ b/src/components/workSection/workSection.module.css
@@ -4,8 +4,7 @@
   padding-right: 80px;
 }
 
-.topArea {
-}
+.topArea { }
 
 .divWithIntroText {
   color: #6b6b6b;
@@ -52,8 +51,7 @@
   gap: 180px;
 }
 
-.bottomAreaLeftColumn {
-}
+.bottomAreaLeftColumn { }
 
 .divWithImage {
   height: 592px;
@@ -74,15 +72,15 @@
   line-height: 120%;
   max-width: 300px;
   text-align: center;
-  top: 38%;
-  left: 20%;
+  top: 32%;
+  left: 26%;
 }
 
 .textOverlayDescription {
   font-size: 18px;
   line-height: 160%;
   text-align: center;
-  top: 42%;
+  top: 38%;
   left: 12%;
 }
 
@@ -99,8 +97,7 @@
   gap: 48px;
 }
 
-.divWithWorkHeading {
-}
+.divWithWorkHeading { }
 
 .workHeading {
   font-size: 24px;
